tests/machine/x/c/map_in_operator.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_in_operator.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_in_operator.c:67:29: warning: passing argument 3 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   67 |   map_int_bool_put(&_t1, 1, "a");
      |                             ^~~
      |                             |
      |                             char *
/workspace/mochi/tests/machine/x/c/map_in_operator.c:46:60: note: expected ‘int’ but argument is of type ‘char *’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                                        ~~~~^~~~~
/workspace/mochi/tests/machine/x/c/map_in_operator.c:68:29: warning: passing argument 3 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   68 |   map_int_bool_put(&_t1, 2, "b");
      |                             ^~~
      |                             |
      |                             char *
/workspace/mochi/tests/machine/x/c/map_in_operator.c:46:60: note: expected ‘int’ but argument is of type ‘char *’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                                        ~~~~^~~~~
/workspace/mochi/tests/machine/x/c/map_in_operator.c:69:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   69 |   int m = _t1;
      |           ^~~
/workspace/mochi/tests/machine/x/c/map_in_operator.c:70:21: error: expected ‘)’ before ‘in’
   70 |   printf("%s\n", ((1 in m)) ? "true" : "false");
      |                   ~ ^~~
      |                     )
/workspace/mochi/tests/machine/x/c/map_in_operator.c:71:21: error: expected ‘)’ before ‘in’
   71 |   printf("%s\n", ((3 in m)) ? "true" : "false");
      |                   ~ ^~~
      |                     )

   1: #include <stdio.h>
